prod/hasura2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hasura2
  namespace: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hasura2
  template:
    metadata:
      labels:
        app: hasura2
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - hasura2
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: hasura2
        image: hasura/graphql-engine:v1.3.3
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "50m"
        ports:
        - containerPort: 8080
          protocol: TCP
