prod/hasura2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hasura2
  namespace: prod
spec:
  selector:
    app: hasura2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
