prod/hasura2/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hasura2
  namespace: prod
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # cert-manager.io/cluster-issuer: "letsencrypt-staging"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - api.mapofzones.com
    secretName: test2-kubernetes-tls
  rules:
  - host: api.mapofzones.com
    http:
      paths:
      - path: /
        backend:
          serviceName: hasura2
          servicePort: 80
