prod/hasura2/ingress22.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hasura22
  namespace: prod
  # annotations:
  #   cert-manager.io/issuer: letsencrypt-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  # tls:
  #   - hosts:
  #     - quote.starter-kit.online
  #     secretName: letsencrypt-nginx-quote
  tls:
    - hosts:
        - api2.mapofzones.com
      secretName: test2-kubernetes-tls
  rules:
    - host: api2.mapofzones.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hasura2
                port:
                  number: 80
  ingressClassName: nginx
